<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Address Book</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="web">Webpage URL</string>
    <string name="products">Products/Services</string>
    <string name="classification">Company type</string>
    <string name="company">Type of Company</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="type_option">
        <item>Consulting</item>
        <item>Customised development</item>
        <item>Software development</item>
    </string-array>
    <string name="consultancy">Consultancy</string>
    <string name="development">Customised development</string>
    <string name="softdev">Software development</string>
    <string name="company_list">Company List</string>
    <string name="check">Are you sure ?</string>

    <!--Actions-->
    <string name="created_success">Contacted created successfully</string>
    <string name="created_failure">Failed to create contact</string>
    <string name="updated_success">Changes have been made successfully</string>
    <string name="updated_failure">Changes have failed</string>
    <string name="deleted_success">Deleted successfully</string>
    <string name="deleted_failure">Unable to delete contact</string>

</resources>