<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayContact" >

    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--LABELS-->
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextEmail"
            android:layout_alignLeft="@+id/name_label"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name_label"
            android:layout_alignBottom="@+id/editTextPhone"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/products_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextProducts"
            android:layout_alignBottom="@+id/editTextProducts"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/editTextProducts"
            android:text="@string/products"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/webpage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextWeb"
            android:layout_alignBottom="@+id/editTextWeb"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/editTextEmail"
            android:text="@string/web"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/classification_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextType"
            android:layout_alignBottom="@+id/editTextType"
            android:layout_below="@+id/webpage_label"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/editTextWeb"
            android:text="@string/classification"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <!--EDIT TEXT-->








        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/editTextWeb"
            android:layout_alignLeft="@+id/editTextWeb"
            android:layout_alignTop="@id/classification_label"
            android:layout_alignRight="@id/editTextWeb"
            android:layout_alignBottom="@id/classification_label"
            android:layout_toRightOf="@+id/classification_label"


            android:spinnerMode="dropdown" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextProducts"
            android:layout_alignLeft="@+id/editTextProducts"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignRight="@+id/editTextName"

            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhone"
            android:layout_alignLeft="@+id/editTextName"
            android:ems="10"
            android:inputType="text">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextProducts"
            android:layout_below="@+id/editTextName"
            android:ems="10"
            android:inputType="phone|text" />

        <!--BUTTONS-->

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_type"
            android:layout_alignLeft="@+id/editTextWeb"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28dp"
            android:onClick="run"
            android:text="@string/save" />

    </RelativeLayout>
</ScrollView>